<resources>
    <string name="app_name">My Planet</string>
    <string name="personal_page">Личный кабинет</string>
    <string name="location_user">Локация/Город</string>
    <string name="id_tour">Тур/Путешествие</string>
    <string name="item_tools">Что нужно взять с собой/Принадлежности/Инструменты/Продукты</string>
    <string name="items_useful_materials">Полезные материалы</string>
    <string name="text_user_name_header_main">User_Name</string>
    <string name="text_header_main_settings">Settings</string>
    <string name="content_description_main_menu_header">Пользователь</string>
    <string name="action_settings">Settings</string>
    <string name="text_find_menu">Поиск</string>
    <string name="text_menu_calendar">Календарь</string>
    <string name="text_menu_weather">Погода</string>
    <string name="text_menu_history">История</string>
    <string name="text_menu_settings">Настройки</string>
    <string name="nav_authorization">Авторизация</string>
    <string name="nav_find">Поиск</string>
    <string name="nav_tour">Тур/Путешествие</string>
    <string name="nav_useful_materials">Полезные материалы</string>
    <string name="nav_tools">Что нужно взять с собой</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_title">Авторизация</string>
    <string name="personalCabinet">Личный кабинет</string>
    <string name="login_with_google">Войти с помощью Google</string>
    <string name="exit_auth">Выйти</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="snackbar_exit_auth">User sign out!</string>

    <string name="email_subject">Тема</string>
    <string name="email_text">Мое сообщение ...</string>
    <string name="default_web_client_id">default</string>
</resources>