<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_authorization"
            android:icon="@drawable/ic_sign_in"
            android:title="@string/personal_page" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/loupe"
            android:title="@string/text_find_menu" />
        <item
            android:id="@+id/nav_tour"
            android:icon="@drawable/luggage"
            android:title="@string/id_tour" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_tools"
            android:title="@string/item_tools" />
        <item
            android:id="@+id/nav_useful_materials"
            android:icon="@drawable/book"
            android:title="@string/items_useful_materials" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/text_menu_calendar" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather"
            android:title="@string/text_menu_weather" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/text_menu_history" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location_user"
            android:title="@string/location_user" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/text_menu_settings" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/exit_auth"
            android:icon="@drawable/logout"
            android:onClick="exitUser"
            />
    </group>
</menu>